# OpenCVDemo

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/shou/tv/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/shou/tv/opencvdemo/: ImageUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/shou/tv/opencvdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
